[gd_scene load_steps=18 format=2]

[ext_resource path="res://shared/enemies/zombieSnake/ZombieSnake.gd" type="Script" id=1]
[ext_resource path="res://shared/enemies/zombieSnake/zombie snake3.png" type="Texture" id=2]
[ext_resource path="res://shared/enemies/zombieSnake/zombie snake1.png" type="Texture" id=3]
[ext_resource path="res://shared/enemies/zombieSnake/zombie snake2.png" type="Texture" id=4]
[ext_resource path="res://shared/enemies/zombieSnake/zombie snake4.png" type="Texture" id=5]
[ext_resource path="res://shared/enemies/zombieSnake/zombie snake5.png" type="Texture" id=6]
[ext_resource path="res://shared/enemies/zombieSnake/zombieSnakeLightning1.png" type="Texture" id=7]
[ext_resource path="res://shared/enemies/zombieSnake/zombieSnakeLightning2.png" type="Texture" id=8]
[ext_resource path="res://shared/enemies/zombieSnake/zombieSnakeLightning3.png" type="Texture" id=9]
[ext_resource path="res://shared/enemies/zombieSnake/zombieSnakeLightning4.png" type="Texture" id=10]
[ext_resource path="res://shared/enemies/zombieSnake/zombieSnakeLightning5.png" type="Texture" id=11]
[ext_resource path="res://shared/attacks/burningParticleEffect/BurningParticleEffects.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 81.674, 7.48719 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 37.0223, 19.4838 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 35.1545, 14.5886 )

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 2 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "tailDown",
"speed": 2.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": false,
"name": "tailUp",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]

animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="ZombieSnake" type="KinematicBody2D"]

input_pickable = false
collision_layer = 8
collision_mask = 2
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Material", "Pickable", "Transform", "Visibility", "Z Index", "collision" ]
__meta__ = {
"_edit_horizontal_guides_": [ 42.7715 ]
}

[node name="RayCastFront" type="RayCast2D" parent="." index="0"]

position = Vector2( -75, -2e-006 )
rotation = 1.5708
scale = Vector2( 1, 3.5 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="RayCastBack" type="RayCast2D" parent="." index="1"]

position = Vector2( 75, -3e-006 )
rotation = -1.5708
scale = Vector2( 1, 3.5 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

position = Vector2( 15.5436, 35.0141 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="." index="3"]

position = Vector2( -28.6101, 7.39733 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="." index="4"]

position = Vector2( -62.6101, -27.6027 )
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="5"]

scale = Vector2( 0.5, 0.5 )
frames = SubResource( 4 )
animation = "tailDown"
frame = 4
playing = true
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="LightningAnimatedSprite" type="AnimatedSprite" parent="." index="6"]

visible = false
position = Vector2( -6.41318, -3.6888 )
scale = Vector2( 0.470961, 0.470961 )
frames = SubResource( 5 )
animation = "default"
frame = 4
_sections_unfolded = [ "Visibility" ]

[node name="ColdTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 4.0
one_shot = true
autostart = false

[node name="ShockedTimer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[node name="IceLightningTimer" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="BurningTimer" type="Timer" parent="." index="10"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[node name="BurningParticleEffects1" parent="." index="11" instance=ExtResource( 12 )]

position = Vector2( -10.9433, -8.30179 )

[node name="BurningParticleEffects2" parent="." index="12" instance=ExtResource( 12 )]

position = Vector2( -78.1123, -32.0751 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]

[connection signal="timeout" from="ColdTimer" to="." method="_on_ColdTimer_timeout"]

[connection signal="timeout" from="ShockedTimer" to="." method="_on_ShockedTimer_timeout"]

[connection signal="timeout" from="IceLightningTimer" to="." method="_on_IceLightningTimer_timeout"]

[connection signal="timeout" from="BurningTimer" to="." method="_on_BurningTimer_timeout"]


